--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "formik": "^2.4.6",
     "react": "19.1.0",
     "react-native": "0.80.1",
+    "react-native-date-picker": "^5.0.13",
     "react-native-safe-area-context": "^5.5.1",
     "react-native-screens": "^4.11.1",
     "react-native-sqlite-storage": "^6.0.1",
